--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,7 @@
-<%- include('header') -%>
-<h1>Home</h1>
+<%- include('partials/header') -%>
+<div class="container">
+  <h1>Home</h1>
+  <p><%= StartContent %></p>
+</div>
 
-<p><%= StartContent %></p>
-<%- include('footer') -%>
+<%- include('partials/footer') -%>
