--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -1,7 +1,9 @@
 <%- include('partials/header.ejs')%>
 <div class="container">
   <h1>COMPOSE</h1>
-  <input type="text" />
-  <button type="submit">Publish</button>
+  <form action="/compose" method="post">
+    <input type="text" name="postTitle" />
+    <button type="submit" name="button">Publish</button>
+  </form>
 </div>
 <%- include('partials/footer.ejs')%>
