--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -1,9 +1,31 @@
 <%- include('partials/header.ejs')%>
 <div class="container">
-  <h1>COMPOSE</h1>
   <form action="/compose" method="post">
-    <input type="text" name="postTitle" />
-    <button type="submit" name="button">Publish</button>
+    <div class="container">
+      <h1>Compose</h1>
+      <form>
+        <div class="form-group">
+          <label for="postTitle">Title</label>
+          <input
+            type="text"
+            class="form-control"
+            name="postTitle"
+            placeholder=""
+          />
+        </div>
+        <div class="form-group">
+          <label for="postText">Post</label>
+          <textarea
+            type="text"
+            class="form-control"
+            name="postText"
+            placeholder=""
+          ></textarea>
+        </div>
+
+        <button type="submit" class="btn btn-primary">Publish</button>
+      </form>
+    </div>
   </form>
 </div>
 <%- include('partials/footer.ejs')%>
